--- a/styles.css
+++ b/styles.css
@@ -206,7 +206,7 @@ a{
     border-radius: 1rem;
     font-size: 1.5rem;
     font-weight: 500;
-    color: var(--light-green);
+    color: var(--very-light-blue);
     text-shadow: 0 0 0.15rem #253A4F;
     font-family: 'Roboto Mono', monospace;
 
